--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.3",
+    "html-react-parser": "^1.4.6",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-wavify": "^1.5.4"
+    "react-slick": "^0.28.1",
+    "react-wavify": "^1.5.4",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
