--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "html-react-parser": "^1.4.6",
     "next": "12.0.8",
     "react": "17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
     "react-slick": "^0.28.1",
     "react-wavify": "^1.5.4",
